# jni-opencv-android

./: .gitignore  README.md  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/zds/jnitest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/zds/jnitest/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/zds/jnitest/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
